--- a/ponovo.html
+++ b/ponovo.html
@@ -15,6 +15,7 @@
     
     </script>
          <br><center>
+          <p>Успешно унети подаци!</p><br><br>
           <button type="button" onclick="Ponovo()">Понови унос</button><br><br>
           <button type="button" onclick="Vrati()">Не желим више да уносим</button>
         </center>
