--- a/pocetna.html
+++ b/pocetna.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-       
+     <script type="text/javascript" src="forma_za_unos.js"></script>  
       
     <script type='text/javascript'>
         function Unos(){
