--- a/right_side.html
+++ b/right_side.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <div class="column side">
-    <h2>Right Side</h2>
-    <p>Христос васкрсе!</p>
-  </div>  
+    <script type="text/javascript" src="forma_za_unos.js"></script>
+<!--  <div class="column right">-->
+   
+      <h2>Right Side</h2>
+    
+<!--    </div>-->
 </body>
 </html>
