--- a/select_table.html
+++ b/select_table.html
@@ -25,7 +25,7 @@
         
     <?php 
         $i=0;
-        while($names){
+        while($i<count($names)){
             echo "<tr><td>";
             foreach($names[$i] as $x => $x_value){
                 echo $x_value;
