--- a/right_side.html
+++ b/right_side.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="Styles.css">  
+    <link rel="stylesheet" type="text/css" href="css/styles.css">  
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <script type="text/javascript" src="forma_za_unos.js"></script>
+    <script type="text/javascript" src="js/forma_za_unos.js"></script>
 <!--  <div class="column right">-->
    
       <h2>Right Side</h2>
