insert-update-search

--- a/right_side.html
+++ b/right_side.html
@@ -6,10 +6,10 @@
 </head>
 <body>
     <script type="text/javascript" src="js/forma_za_unos.js"></script>
-<!--  <div class="column right">-->
+  <div class="column right">
    
       <h2>Right Side</h2>
     
-<!--    </div>-->
+    </div>
 </body>
 </html>
