--- a/website_layout.html
+++ b/website_layout.html
@@ -28,6 +28,7 @@
 </div>
 
 <div class="topnav">
+  <a href="#" onclick="Vrati();return false;">Home</a>
   <a href="#">Search</a>
   <a href="#">Add New</a>
   <a href="#">Edit</a>
