--- a/website_layout.html
+++ b/website_layout.html
@@ -7,20 +7,7 @@
 </head>
 <body>
      <script type="text/javascript" src="js/forma_za_unos.js"></script>  
-<!--     <script type='text/javascript'>
-        function Unos(){
-        window.location.href = "forma_za_unos.php";
-        }
-        
-        function Select_table(){
-        window.location.href = "select_table.php";   
-        }
-    </script>-->
-   
 
-
-          
- <!-- Website Layout-->  
  
   <div class="header">
   <h1>Header</h1>
@@ -29,7 +16,7 @@
 
 <div class="topnav">
   <a href="#" onclick="Vrati();return false;">Home</a>
-  <a href="#">Search</a>
+  <a href="#" onclick="Full_search();return false;">Search</a>
   <a href="#">Add New</a>
   <a href="#">Edit</a>
 </div>
