--- a/small_search.html
+++ b/small_search.html
@@ -27,7 +27,7 @@
                     echo '</td><td>';
                 }
             }
-            echo '<a href="#"><img src="images/if_pensil_50835.png" alt="edit_picture" class="image"></a><br><br>'
+            echo '<a href="#"><img src="images/if_pensil_50835.png" alt="edit_picture" class="image"></a>&emsp;&emsp;'
             .'<a href="#"><img src="images/if_edit-delete_23231.png" alt="delete_picture" class="image"></a>'
             ."</td></tr>";
             $i=$i+1;
