--- a/search_list.html
+++ b/search_list.html
@@ -90,7 +90,8 @@
                 }
             }
             echo '<a href="#"><img src="images/if_pensil_50835.png" alt="edit_picture" class="image"></a>&emsp;&emsp;'
-            .'<a href="#"><img src="images/if_edit-delete_23231.png" alt="delete_picture" class="image"></a>'
+            .'<a href="" onclick="Delete_row('.$employees_list["names"][$i]["id_zaposleni"].')">'
+            .'<img src="images/if_edit-delete_23231.png" alt="delete_picture" class="image"></a>'
             ."</td></tr>";
             $i=$i+1;
         } 
