--- a/full_search.html
+++ b/full_search.html
@@ -127,7 +127,7 @@
                 }
             }
             echo '<a href="#"><img src="images/if_pensil_50835.png" alt="edit_picture" class="image"></a>&emsp;&emsp;'
-            .'<a href="#"><img src="images/if_edit-delete_23231.png" alt="delete_picture" class="image"></a>'
+            .'<a href="" onclick="Delete_row_full('.$employees_list["names"][$i]["id_zaposleni"].')"><img src="images/if_edit-delete_23231.png" alt="delete_picture" class="image"></a>'
             ."</td></tr>";
             $i=$i+1;
         } 
