--- a/full_search.html
+++ b/full_search.html
@@ -126,7 +126,7 @@
                     echo '</td><td>';
                 }
             }
-            echo '<a href="#"><img src="images/if_pensil_50835.png" alt="edit_picture" class="image"></a>&emsp;&emsp;'
+            echo '<a href="" onclick="Update_select('.$employees_list["names"][$i]["id_zaposleni"].')"><img src="images/if_pensil_50835.png" alt="edit_picture" class="image"></a>&emsp;&emsp;'
             .'<a href="" onclick="Delete_row_full('.$employees_list["names"][$i]["id_zaposleni"].')"><img src="images/if_edit-delete_23231.png" alt="delete_picture" class="image"></a>'
             ."</td></tr>";
             $i=$i+1;
