--- a/select_table.html
+++ b/select_table.html
@@ -52,10 +52,9 @@
         
     </table>
         
-        <?php 
-        echo $_SESSION['div_display'];
-        echo '<div id="ShowHideSearch" style='.$_SESSION['div_display'].'>' ?>       
-            <table> 
+        <?php        
+        echo '<div id="ShowHideSearch" style=display:'.$_SESSION['div_display'].'>' ?>       
+        <table> 
             <tr>
                 <td>
                     <?php 
