--- a/website_layout.html
+++ b/website_layout.html
@@ -24,7 +24,7 @@
   <div class="column left">
     <h2>Left Side</h2>
     <button onclick="loadPage('forma_za_unos.php')">Insert data</button><br><br>
-    <button onclick="loadPage('select_table.php')">Employees</button>
+    <button onclick="loadPage('blanco_select_table.php');ResetFields('form_filter', ['ime', 'prezime', 'srednje_ime'], '')">Employees</button>
   </div>
 
 </body>
