--- a/search_list.html
+++ b/search_list.html
@@ -50,7 +50,8 @@
                 </td>
             </tr>            
     </table>
-    <?php echo '<div id="ShowHideSearch" style="display:none">' ?>
+    <?php        
+        echo '<div id="ShowHideSearch" style=display:'.$_SESSION['div_display'].'>' ?>
         <table> 
             <tr>
                 <td>
@@ -93,7 +94,7 @@
         </table>
                         
         </div>  
-    <button type="button" onclick="ShowHideSelect()">More/Less</button>
+    <button type="button" onclick="ShowHideSearch()">More/Less</button>
     </form>
    
     <div class="no_border">
