--- a/website_layout.html
+++ b/website_layout.html
@@ -16,7 +16,7 @@
 
 <div class="topnav">
   <a href="#" onclick="Vrati();return false;">Home</a>
-  <a href="#" onclick="Full_search();return false;">Search</a>
+  <a href="#" onclick="loadPage('blanco_select_table.php');return false;">Search</a>
   <a href="#">Add New</a>
   <a href="#">Edit</a>
 </div>
