--- a/forma_za_unos.html
+++ b/forma_za_unos.html
@@ -17,7 +17,7 @@
  
  <form id="forma_unos" action="forma_za_unos.php" method="post">
      <center>
-     <h2>Insert data</h2>
+     <h2>Add New</h2>
      
      </center>
      <div class="insert_data">
