--- a/select_table.html
+++ b/select_table.html
@@ -95,7 +95,7 @@
             </tr>            
         </table>            
         </div>    
-        <button type="button" onclick="ShowHideSelect()">More/Less</button>
+        <?php  echo '<button type="button" onclick="ShowHideSearch()">'.$_SESSION['button_display'].'</button>';  ?>
     </form>
     
     <div class="no_border">
