--- a/search_list.html
+++ b/search_list.html
@@ -95,7 +95,7 @@
         </table>
                            
         </div>
-        <button type="button" onclick="ShowHideSearch()">More/Less</button>
+      <?php  echo '<button type="button" id="ShowHideButton" onclick="ShowHideSearch()">'.$_SESSION['button_display'].'</button>';  ?>
     </form> 
 
 <div class="no_border">
