--- a/website_layout.html
+++ b/website_layout.html
@@ -17,8 +17,8 @@
 <div class="topnav">
   <a href="#" onclick="Vrati();return false;">Home</a>
   <a href="#" onclick="loadPage('blanco_select_table.php');return false;">Search</a>
-  <a href="#">Add New</a>
-  <a href="#">Edit</a>
+  <a href="#" onclick="loadPage('forma_za_unos.php')">Add New</a>
+  
 </div>
  
   <div class="column left">
