--- a/first_page.html
+++ b/first_page.html
@@ -3,8 +3,7 @@
         <link rel="stylesheet" type="text/css" href="css/styles.css">  
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <script type="text/javascript" src="js/forma_za_unos.js"></script> 
+        <script type="text/javascript" src="js/functions.js"></script> 
     </head>
     
     <body>
