--- a/ponovo.html
+++ b/ponovo.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        
+        <script type="text/javascript" src="js/functions.js"></script>
         <meta charset="UTF-8">
         
     </head>
