--- a/insert_form.html
+++ b/insert_form.html
@@ -4,20 +4,18 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>    
 <body>
-    <script>
+    <script>        
         $(document).ready(function(){
-            $("#btn_submit").click(function(){
-                
-                $.post("insert_service.php",
-                    {
-                        $("#insert_form").serialize()
-                    },
-                    function(data, status){
-                        alert("Data: " + data + "\nStatus: " + status);
-                    }
-                );
-            });
-       
+                $("#btn_submit")
+                    .click(function(){                
+                        $.post("insert_service.php",                            
+                            $("#insert_form").serialize(),
+                            function(data, status){
+                                alert("Data: " + data + "\nStatus: " + status);
+                            }
+                        );
+                    });
+        });
     </script>
     <div class="header">
         <h1>Header</h1> 
@@ -35,7 +33,7 @@
         <center>
             <h2>Insert data</h2>
         </center>
-        <form id="insert_form" name="insert_form" action="insert_service.php" method="post">
+        <form id="insert_form" name="insert_form" action="" method="post">
             <div class="insert_data">
                 <table>
                     <col width="40%">
@@ -112,7 +110,7 @@
                         <td>                     
                         </td>
                         <td>
-                            <input type="submit" id="btn_submit" value="Submit">
+                            <button type="button"  id="btn_submit">Submit</button>
                         </td>
                     </tr>
                 </table>
