--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
         $(document).ready(function(){
                 $("#btn_submit")
                     .click(function(){                
-                        $.post("insert_service_login.php",                            
+                        $.post("login_service.php",                            
                             $("#insert_form").serialize(),
                             function(data, status){
                                 alert("Data: " + data + "\nStatus: " + status);
