--- a/forgot_password.html
+++ b/forgot_password.html
@@ -17,8 +17,9 @@
                             success: function (data){                             
                                 var obj = JSON.parse(data);
                                 alert(obj.found+" id is: "+obj.id+" "+obj.changed+" "+obj.sent);
-                                localStorage.setItem("message","Your password has changed! Please, log-in with new password!");
+                                
                                 window.location.href = "login.html";
+                                localStorage.setItem("message","Your password has changed! Please, log-in with new password!");
                             },
                             error: function(request, status, error){                                
                                 var obj = JSON.parse(request.responseText); 
@@ -55,7 +56,7 @@
                 });
                 $("#a_home").click(function(){                
                     localStorage.setItem("entered_email","");
-                   
+                    localStorage.setItem("message","");
                 });
                 $("#email").val(localStorage.getItem("entered_email"));
                 $("#email").change(function(){
